--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,8 +37,10 @@
             android:text="Submit"
             tools:layout_editor_absoluteX="267dp"
             tools:layout_editor_absoluteY="95dp"
-            android:layout_marginTop="27dp"
-            android:layout_below="@+id/ET" />
+            android:layout_marginTop="56dp"
+            android:layout_below="@+id/ET"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/textView"
